# SLT

./: .gitignore  AGENTS.md  Proyecto  README.md  agua-como-tomar-conciencia-sobre-su-cuidado-episodio-3-en-lengua-de-senas-argentina-lsa_2.npy  gitignore.txt  meta.csv  pyproject.toml  requirements-dev.txt  train_slt_lsa_mska_v13.py
.github/workflows/: tests.yml
configs/: signmusketeers_sgr.yml
configs/presets/: decoder_signmusketeers_t5.yaml  mska_paper_mbart.yaml
docs/: architecture_overview.md  data_contract.md  finetuning.md  metrics_dashboard_integration.py  mska-paper-config.md  offline_cache.md  operational_checklist.md  pretraining.md  qa_audit.md  signmusketeers-paper-summary.md  train_slt_multistream_v9.md
slt/: __init__.py  __main__.py
slt/data/: __init__.py  lsa_t_multistream.py
slt/models/: __init__.py  backbones.py  (+7 more)
tests/: __init__.py  _synthetic.py  conftest.py  test_cli_main.py  test_data_pipeline.py  test_export.py  test_extract_rois_hands.py  test_extract_rois_v2.py  test_metadata_utils.py  test_pipeline_end_to_end.py  test_text_utils.py  test_training_resume.py  test_utils.py
tools/: README.md  _pretrain_dino.py  _tinyvit_stub.py  batch_eval_slt_models.py  ci_validate_data_contract.py  ci_validate_metrics.py  demo_realtime_multistream.py  eval_slt_multistream_v9.py  export_onnx_encoder_v9.py  extract_rois_v2.py  fine_tune_phoenix_lsat.py  prepare_lsat_crops.py  pretrain_dino_face.py  pretrain_dino_hands.py  pretrain_dinov2_multistream.py  pretrain_utils.py  test_realtime_pipeline.py  train_slt_lsa_mska_v13.py  train_slt_multistream_v9.py
(+41 files in other folders)
